         periph.h,peripherals/disk/{Makefile.am,disciple.[ch]},settings.dat,
         tape.c,ui.c,ui/{options.dat,ui.h},z80/{coretest.c,z80_checks.h,
         z80_ops.c}: DISCiPLE emulation (Stuart).
20110414 disciple.c: avoid C++/C99 comments (Stuart).
20110415 ui/win32/win32ui.c: fix the disabling of menu entries below a
         separator, e.g., /File/Movie/Stop Movie Recording (patch #3286195)
         (Sergio Baldovi).
20110425 ui/gtk/{gtkdisplay.c,gtkinternals.h,statusbar.c}: fix warnings.
20110430 configure.in: fix compilation --without-gtk --with-x with libpng 1.4
         installed as libpng14 (thanks, rkd77) (Fred).
20110430 ui/xlib/xjoystick.c: fix compilation --without-gtk --with-x with
         joystick configured (rkd77).
20110430 ui/win32/{statusbar.c,win32display.c,win32internals.h}: add machine
         name into the status bar the same as the GTK UI. Fix a few compiler
         warnings (patch #3294566) (Sergio Baldovi).
20110430 ui/win32/win32ui.c: make selection dialogs accurately resized to show a
         full caption title, resize properly with high DPI settings (more of
         patch #3258533) (Sergio Baldovi).
20110501 man/fuse.1: Fix typo (AY-3-8192 -> AY-3-8912) (Stuart).
20110501 ChangeLog,README,man/fuse.1: Fix typos (Stuart).
20110501 sound.c: enable SpecDrum on both channels when using stereo (Stuart).
20110502 configure.in: remove unneeded AM_SUBST_NOTMAKE macro as it doesn't get
         along with older autotools (patch #3295662) (thanks, Tomáš Franke)
         (Sergio Baldoví)
20110504 tape.c: fix warnings.
20110506 configure.in: fix build for mingw+msys broken in revision 4399 (more
         from bug #3295295) (Sergio Baldoví)
20110509 machines/machines_periph.c,peripherals/ay.c,periph.h: reading from
         port 0xbffd on +2A/+3 was lost in peripheral refactoring (thanks,
         fusetest).
20110511 compat/unix/tuntap.c: add missing #include <string.h>.
20110514 tape.c: add case for set signal level block (Fred).