@@ -3636,3 +3636,5 @@
          fusetest).
 20110511 compat/unix/tuntap.c: add missing #include <string.h>.
 20110514 tape.c: add case for set signal level block (Fred).
+20110514 tape.c: we want to allow 0 tstate blocks to twiddle the mic to
+         accomodate the set signal level block (Fred).
